--- a/src/index.css
+++ b/src/index.css
@@ -1,68 +1,72 @@
-:root {
-  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
-  line-height: 1.5;
-  font-weight: 400;
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
 
-  color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
-
-  font-synthesis: none;
-  text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+@font-face {
+  font-family: "Inter";
+  src: url("/public/fonts/static/Inter-Regular.ttf") format("truetype");
+  font-weight: 400; /* Regular weight */
+  font-style: normal;
 }
 
-a {
-  font-weight: 500;
-  color: #646cff;
-  text-decoration: inherit;
-}
-a:hover {
-  color: #535bf2;
+@font-face {
+  font-family: "Inter";
+  src: url("/public/fonts/static/Inter-SemiBold.ttf") format("truetype");
+  font-weight: 600; /* Semibold weight */
+  font-style: normal;
 }
 
 body {
-  margin: 0;
-  display: flex;
-  place-items: center;
-  min-width: 320px;
-  min-height: 100vh;
+  background-color: white;
+  color: #253347;
+}
+
+.siteAa {
+  margin-left: 10px;
+  margin-right: 10px;
+}
+
+.mainTitle {
+  background: linear-gradient(180deg, #f0f9ff, #e6f7ff);
+
+  width: 1250px;
+  height: 737px;
+}
+.info {
+  background: linear-gradient(180deg, #f0f9ffa1, #e6f7ff70);
+}
+
+.darkBlue {
+  color: #5e6e85;
 }
 
 h1 {
-  font-size: 3.2em;
-  line-height: 1.1;
+  max-width: 480px;
 }
 
-button {
-  border-radius: 8px;
-  border: 1px solid transparent;
-  padding: 0.6em 1.2em;
-  font-size: 1em;
-  font-weight: 500;
-  font-family: inherit;
-  background-color: #1a1a1a;
-  cursor: pointer;
-  transition: border-color 0.25s;
-}
-button:hover {
-  border-color: #646cff;
-}
-button:focus,
-button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
+.hero-text {
+  max-width: 465px;
 }
 
-@media (prefers-color-scheme: light) {
-  :root {
-    color: #213547;
-    background-color: #ffffff;
-  }
-  a:hover {
-    color: #747bff;
-  }
-  button {
-    background-color: #f9f9f9;
-  }
+.calculator {
+  width: 620px;
+  height: 470px;
+}
+
+.greatins {
+  width: 550px;
+  height: 160px;
+}
+
+.limitation {
+  width: 564px;
+  height: 184px;
+}
+
+.gridCols {
+  margin-left: 750px;
+}
+
+.flexCols {
+  margin-left: 600px;
 }
